cert/templates/quarkus-pipeline-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-pipeline-test
  namespace: cert-manager
  annotations:
    kubernetes.io/ingress.class: "nginx"   
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "False"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
    - digitor.dk
    secretName: quickstart-example-tls
  rules:
  - host: digitor.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quarkus-pipeline-test
            port:
              number: 80
